force-app/main/default/objects/DIR_Inspection__c/fields/Deputy__c.field-meta.xml
<CustomField>
    <fullName>Deputy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the deputy performing inspection. For BOFE, the VF page sets this value by getting the user record and locating the employee record for the user performing the inspection</description>
    <inlineHelpText>Deputy Performing Inspection</inlineHelpText>
    <label>Deputy</label>
    <referenceTo>DIR_Employee__c</referenceTo>
    <relationshipLabel>Inspections</relationshipLabel>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>