force-app/main/default/objects/DIR_Inspection__c/fields/DIR_Case__c.field-meta.xml
<CustomField>
    <fullName>DIR_Case__c</fullName>
    <description>This field creates a Master-Detail relationship between an Inspection and the Case.  Not reparentable.</description>
    <inlineHelpText>This field creates a Master-Detail relationship between an Inspection and the Case.  Not reparentable.</inlineHelpText>
    <label>Case</label>
    <referenceTo>DIR_Case__c</referenceTo>
    <relationshipLabel>Inspections</relationshipLabel>
    <relationshipName>Inspections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>