force-app/main/default/objects/DIR_Inspection__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End time of the inspection</description>
    <inlineHelpText>Enter the End Time of the inspection</inlineHelpText>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>