force-app/main/default/objects/DIR_Inspection__c/fields/Imported_From__c.field-meta.xml
<CustomField>
    <fullName>Imported_From__c</fullName>
    <label>Imported From</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FM-TIPP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>