force-app/main/default/objects/DIR_Inspection__c/fields/Inspection_New_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Inspection_New_Follow_Up__c</fullName>
    <description>This will show whether the Inspection is a new or followup.</description>
    <label>Inspection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Follow-up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>