force-app/main/default/objects/DIR_Inspection__c/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <description>Contains the Inspection ID from the import environment.</description>
    <label>Legacy ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>