force-app/main/default/objects/DIR_Inspection__c/fields/Location_Phone__c.field-meta.xml
<CustomField>
    <fullName>Location_Phone__c</fullName>
    <description>For the Inspection Report Conga Document to pull the jobsite address (Phone)</description>
    <formula>Inspection_Location__r.Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Phone</label>
    <type>Text</type>
</CustomField>