force-app/main/default/objects/DIR_Inspection__c/fields/Union__c.field-meta.xml
<CustomField>
    <fullName>Union__c</fullName>
    <label>Union?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Union</fullName>
            </value>
            <value>
                <fullName>Non-Union</fullName>
            </value>
            <value>
                <fullName>Don&#39;t Know</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>